--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
+    "@mui/system": "^6.3.1",
     "axios": "^1.7.9",
     "json-server": "^1.0.0-beta.3",
     "prop-types": "^15.8.1",
